# api_docs/swagger.json
@@ -210,6 +210,10 @@
                     "description": "This field contains the expression used to filter the records that must be refreshed. E.g. It may be a MySQL where clause if the source of the refresh is a MySQL table.",
                     "type": "string"
                 },
+                "max_primary_key": {
+                    "description": "The max primary key for refresh table",
+                    "type": "integer"
+                },
                 "offset": {
                     "description": "Represents the last known position that has been refreshed.",
                     "type": "integer"
@@ -432,6 +436,10 @@
                 "filter_condition": {
                     "description": "This field contains the expression used to filter the records that must be refreshed. E.g. It may be a MySQL where clause if the source of the refresh is a MySQL table.",
                     "type": "string"
+                },
+                "max_primary_key": {
+                    "description": "The max primary key for refresh table",
+                    "type": "integer"
                 },
                 "namespace_name": {
                     "description": "Name of the namespace the refresh is running on.",
@@ -837,6 +845,10 @@
         },
         "UpdateRefreshStatusRequest": {
             "properties": {
+                "max_primary_key": {
+                    "description": "The max primary key for refresh table",
+                    "type": "integer"
+                },
                 "offset": {
                     "description": "Represents the last known position that has been refreshed.",
                     "type": "integer"
@@ -855,7 +867,8 @@
             },
             "required": [
                 "status",
-                "offset"
+                "offset",
+                "max_primary_key"
             ],
             "type": "object"
         }
