# schematizer/logic/schema_repository.py
@@ -743,6 +743,7 @@ def list_refreshes_by_source_id(source_id):
 def create_refresh(
         source_id,
         offset,
+        max_primary_key,
         batch_size,
         priority,
         filter_condition,
@@ -751,6 +752,7 @@ def create_refresh(
     refresh = models.Refresh(
         source_id=source_id,
         offset=offset,
+        max_primary_key=max_primary_key,
         batch_size=batch_size,
         priority=priority,
         filter_condition=filter_condition,
